# koku

./: .baseimagedigest  .codeclimate.yml  .codecov.yml  .coveragerc  .cursorrules  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pyup.yml  .shellcheckrc  .snyk  .sourcery.yaml  .sqlfluff  .sqlfluffignore  .travis.yml  0_before_error.txt  0_before_test.txt  1_before_error.txt  1_before_test.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  COST-575-implementation-notes.md  DCO  Dockerfile  Dockerfile-env  Dockerfile-test  Dockerfile.min  Dockerfile.min.distroless  Dockerfile.minio  Dockerfile.ubi-hive  Dockerfile.ubi-trino  Jenkinsfile  Jenkinsfile-smoke.groovy  LICENSE  Makefile  Makefile.COST-7342  (+93 more)
.claude/: settings.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.s2i/: environment
.tekton/: debug.yaml  koku-onprem-pull-request.yaml  koku-onprem-pull_request.yaml  koku-onprem-push.yaml  koku-pull-request.yaml  koku-push.yaml  pipeline-build.yaml  pull_request.yaml  push.yaml
.travis/: check_manifest.sh
.unleash/: flags.json
api/: blueprint.py  download.py  expired_data.py  notification.py  report_data.py  status.py  update_charge.py
artifacts/: junit-pr_check.xml
celery/: __init__.py  tasks.py  worker.py
ci/: functions.sh
dashboards/: grafana-dashboard-insights-hccm-postgresql.configmap.yaml  grafana-dashboard-insights-hccm-presto.configmap.yaml  grafana-dashboard-insights-hccm-redis.configmap.yaml  grafana-dashboard-insights-hccm.configmap.yaml
database/: __init__.py  account_alias_accessor.py  auth_db_accessor.py  aws_report_db_accessor.py  customer_db_accessor.py  engine.py  koku_database_access.py  ocp_rate_db_accessor.py  ocp_report_db_accessor.py  provider_auth_db_accessor.py  provider_billing_source_db_accessor.py  provider_collector.py  provider_db_accessor.py  provider_status_accessor.py  report_db_accessor.py  report_db_accessor_base.py  report_db_cleaner.py  report_manifest_db_accessor.py  report_stats_db_accessor.py  reporting_common_db_accessor.py
db_functions/: app_migration_check_func.sql  app_needs_migrations_func.sql  array_subtract_func.sql  clone_schema.sql  create_date_partitions.sql  create_schema.sql  create_table_date_range_partition.sql  jsonb_sha256_text.sql  ocpusagelineitem_daily_summary_triggers.sql  partitioned_manage_trigger.sql  partitioned_manager_trigger_function.sql  partitioned_tables_active_trigger.sql  partitioned_tables_active_trigger_function.sql  partitioned_tables_manage_trigger.sql  partitioned_tables_manage_trigger_function.sql  presto_delete_trigger_func.sql  read_schema.sql  reapply_partitioned_tables_manage_trigger_function.sql  record_hash.sql  scan_date_partitions.sql
deploy/: clowdapp.yaml  koku-cji.yaml  koku-migrations-cji.yaml  koku-script-runner-job.yaml  metastore.yaml  presto.yaml  redash.yaml  s3-secret.yaml  savingsplan-clowd-job.yaml
dev/: config.yaml.github-example  config.yaml.local-example  koku-job-cji.yaml.local-example  secrets-template.yaml  test_ci_triager.py
docs/: COST-7342-erd.dot  COST-7342-how-the-bug-happens.md  COST-7342-plan.md  COST-7342-reproduce-issue.md  COST-7342-reproducer-implementation.md  COST-7342.md  Makefile  aws.md  aws.rst  celery.md  cost_model.md  devtools.md  devtools.rst  distributing_cost.md  gcp_cross_over_data.md  generating-release-notes.md  index.md  install.md  jinja_templating.md  koku_setup_on_m1.rst  local-development.md  no_tag_value.md  onprem_data_flow.md  openshift.md  openshift.rst  price-lists-api.md  rancher.md  rbac.md  rosetta_on_m1.rst  rtd_requirements.txt  rtd_requirements.txt.orig  sources.md  technical-design-COST-7284-optimize-gpu-finalization.md  testing.md  testing.rst  trino_partition_pruning.md  users.md  vscode-debugging.md
grafana/: Dockerfile-grafana  grafana.db  grafana.db.sql
koku/: example.py  gunicorn.conf.py  gunicorn.py  gunicorn_conf.py  manage.py
licenses/: Apache-2.0.txt  MIT.txt
openshift/: celery-exporter.yaml  celery-flower.yaml  celery-scheduler.yaml  celery-worker.yaml  configmap.yaml  imagestream.yaml  init-app.sh  koku-api.yaml  koku-auth-cache.yaml  koku-database.yaml  koku-db.yaml  koku-template.yaml  koku.yaml  masu-flask.yaml  masu-listener.yaml  masu.yaml  rabbitmq.yaml  route.yaml  saltcellar-template.yaml  secret.yaml  sources.yaml
pg_init/: 99_postgresql_conf.sh
prefetch-binary/: requirements-build.txt  requirements.txt
processor/: __init__.py  cur_process_request.py  exceptions.py  expired_data_remover.py  orchestrator.py  report_charge_updater.py  report_downloader.py  report_processor.py  report_processor_base.py  report_summary_updater.py  tasks.py
providers/: __init__.py
saltcellar/: database.py  env.py  gunicorn.py  manage.py  settings.py  urls.py  wsgi.py
scripts/: README  __init__.py  adjust_ocp_ui_numerics.py  aws_org_tree.yml  check_for_koku_server.sh  check_for_migration_app_name.py  check_postgres_running.sh  clear_testing.py  columns.txt  copy_ocp_aws_azure_data.py  copy_static_aws_perspective_data.py  copy_static_perspective_data.py  create_koku_s3_bucket.py  create_manifest.py  create_sources.py  create_test_customer.py  create_test_db_user.sh  drop_test_db_user.sh  e2e-deploy.sh  e2e-secrets.yml  entrypoint.sh  fetch_aws_cost_usage.py  fetch_aws_pricing.py  genssc  hive-migration-polars.py  hive-migration.py  insert_aws_org_tree.py  insert_org_tree.py  job_script.sh  koku_partable.yaml  koku_pg_dump.py  load_test_customer_data.sh  migrate_presto.py  migrate_schemas.sql  migrate_tenant_schema_names.sql  migrate_trino.py  ocp_csv_package.py  ocp_packager.py  openshift_on_prem_cost_model.json  pg_partable.py  (+18 more)
sql/: reporting_awscostentrylineitem_aggregates.sql  reporting_awscostentrylineitem_daily.sql  reporting_ocpstoragelineitem_daily.sql  reporting_ocpstoragelineitem_daily_summary.sql  reporting_ocpusagelineitem_aggregates.sql  reporting_ocpusagelineitem_daily.sql  reporting_ocpusagelineitem_daily_cpu_charge.sql  reporting_ocpusagelineitem_daily_summary.sql
testing/: run_api_tests.sh  (+10 more)
(+3928 files in other folders)
