[project]
name = "koku"
version = "0.0.0"
description = "An open source solution for cost management of cloud and hybrid cloud environments."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11.0,<3.12"
dependencies = [
    "adal>=1.2.7",
    "app-common-python>=0.2.7",
    "azure-mgmt-compute>=33.1.0",
    "azure-mgmt-costmanagement>=4.0.1",
    "azure-mgmt-resource>=23.2.0",
    "azure-mgmt-storage>=21.2.1",
    "azure-storage-blob>=12.24.0",
    "boto3>=1.35.91",
    "bs4>=0.0.2",
    "cachetools>=5.5.0",
    "celery>=5.2.7",
    "ciso8601>=2.3.2",
    "confluent-kafka>=2.7.0",
    "croniter>=6.0.0",
    "django-cors-headers>=4.6.0",
    "django~=4.2.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-prometheus>=2.3.1",
    "django-redis>=5.4.0",
    "django-tenants>=3.7.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-csv>=3.0.2",
    "google-api-python-client>=2.157.0",
    "google-auth>=2.37.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-storage>=2.19.0",
    "gunicorn>=23.0.0",
    "ibm-cloud-sdk-core>=3.22.0",
    "ibm-platform-services>=0.59.0",
    "jinjasql2>=0.1.11",
    "kafka-python>=2.0.2",
    "kombu<5.3",
    "msrestazure>=0.6.4.post1",
    "numpy>=2.2.1",
    "oci>=2.141.1",
    "pandas<2.3",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    "psycopg2>=2.9.10",
    "pyarrow>=18.1.0",
    "python-dateutil>=2.9.0.post0",
    "querystring-parser>=1.2.4",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sentry-sdk>=2.19.2",
    "statsmodels>=0.14.4",
    "trino>=0.331.0",
    "unleashclient<5",
    "watchtower==1.0.6",
    "whitenoise>=6.8.2",
    "pydantic>=2.10.4",
    "sqlparse>=0.5.3",
    "polars>=1.18.0",
    "adbc-driver-postgresql>=1.4.0",
]

[dependency-groups]
dev = [
    "argh>=0.31.3",
    "astroid>=3.3.8",
    "coverage>=7.6.10",
    "crc-bonfire>=6.0.2",
    "debugpy>=1.8.11",
    "django-cprofile-middleware>=1.0.5",
    "faker>=33.1.0",
    "flower>=2.0.1",
    "koku-nise>=4.6.9",
    "matplotlib>=3.10.0",
    "memory-profiler>=0.61.0",
    "model-bakery>=1.20.0",
    "pre-commit>=4.0.1",
    "pydocstyle>=6.3.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests-mock>=1.12.1",
    "responses>=0.25.3",
    "snakeviz>=2.2.2",
    "tblib>=3.0.0",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 119
target-version = "py311"
extend-exclude=["**/migrations/*.py"]

[tool.ruff.lint]
# F https://docs.astral.sh/ruff/rules/#pyflakes-f
# E, W https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
# C90 https://docs.astral.sh/ruff/rules/#mccabe-c90
# UP https://docs.astral.sh/ruff/rules/#pyupgrade-up
select = ["F", "E", "W", "C90", "UP"]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (unused import) in all `__init__.py`, `models.py`, and `views.py` files.
"**/__init__.py" = ["F401"]
"**/models.py" = ["F401"]
"**/views.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["koku", "api", "common", "cost_models", "forecast", "hcs", "kafka_utils", "key_metrics", "masu", "providers", "reporting", "reporting_common", "sources", "subs"]
order-by-type = false

[tool.ruff.format]
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false
